Changelog for Audio-MPD

{{$NEXT}}

2.003     2016-05-20 14:01:00+02:00 Europe/Paris
 - fix rt#114136 - allow mpd-dynamic to run without a ratings.db

2.002     2016-04-28 20:35:51+02:00 Europe/Paris
 - fix rt#100300 - test support for mpd 0.19 (Debian)

2.001     2016-04-28 20:27:01+02:00 Europe/Paris
 - mpd-dynamic: simplify code & logic
 - new script mpd-dump-ratings

2.000     2014-06-11 14:31:10+02:00 Europe/Paris
 - adapt to new Moose (rt#90682)
 - fix test breakages due to mpd output changes (rt#91082)
 - migrated to @AUthor::JQUELIN

1.120610  2012-03-01 09:31:01 Europe/Paris
 - fix rt#75436 - mpd-rate and mpd-dynamic should fail gracefully when
   no song is playing (florian)
 - fix rt#75437 - fix mpd-rate and mpd-dynamic pod names

1.113280  2011-11-24 15:07:47 Europe/Paris
 - fix rt#68357 - ipv6 support
 - fix rt#71201 - url handlers can vary with mpd installation
 - fix rt#71202 - requiring software mixer for tests
 - tests for all_genres, artists_by_genre (sebastien nobili)
 - better namespace for scripts

1.112670  2011-09-24 11:40:44 Europe/Paris
 - collection: new method all_genres (sebastien nobili)
 - collection: new method artists_by_genre (sebastien nobili)

1.111200  2011-04-30 10:21:31 Europe/Paris
 - removing misleading example in pod

1.110560  2011-02-25 15:28:59 Europe/Paris
 - new command available: outputs

1.102260  2010-08-14 19:21:51 Europe/Paris
 - new script mpd-rate to rate a song / display current rating

1.100430  2010-02-12 12:51:18 Europe/Paris
 - WARNING: no more makefile.pl supplied, only a build.pl
 - sub::exporter no more used internally

1.093170 Fri Nov 13 19:06:54 2009
 - removed no more used prereq class::accessor
 - revamped pod with podweaver
 - introducing audio::mpd::types
 - using moosex::has::sugar

1.092950 Thu Oct 22 19:34:35 2009
 - module is quite stable now, bumping to 1.yydddn version
 - migrated to moose
 - password() method renamed to set_password()